# arcane_fortune

./: .gitignore  compiling.txt  contributing.txt  license.txt  readme.txt
arcane_fortune/: Cargo.toml  build.rs
arcane_fortune/src/: containers.rs  debug.rs  main.rs  nn.rs
arcane_fortune/src/ai/: ai_actions.rs  attack_fronts.rs  city_planning.rs  config.rs  economy_planning.rs  mod.rs  vars.rs
arcane_fortune/src/buildings/: events.rs  mod.rs  vars.rs
arcane_fortune/src/config/: ai.txt  buildings.txt  colors.txt  current_lang_pref.txt  doctrine.txt  keyboard.txt  localization.txt  map.txt  relations.txt  resources.txt  tech.txt  units.txt
arcane_fortune/src/config_load/: date.rs  mod.rs
arcane_fortune/src/disp/: arrow_key_movements.rs  assign_action_iface.rs  buttons.rs  color.rs  draw_selection.rs  fire.rs  fns.rs  init_display.rs  logo_utils.rs  logo_vars.rs  menus.rs  mod.rs  new_game_options.rs  pie_plot.rs  plot_window.rs  print_bottom_stats.rs  print_map.rs  print_rside_stats.rs  print_submap.rs  profiling.rs  screen_reader.rs  tree.rs  ui_mode.rs  vars.rs  version_status.rs
arcane_fortune/src/doctrine/: disp.rs  mod.rs
arcane_fortune/src/gcore/: brigades.rs  difficulty.rs  economy.rs  end_turn.rs  hashing.rs  log.rs  mod.rs  non_menu_keys.rs  rand.rs  sectors.rs  (+2 more)
ironnetpro/: .gitignore  Cargo.toml  build.rs  todo.txt
ironnetpro/src/: LICENSE.txt  build.sh  crossbeam.rs  cudnn_common.rs  einsum.rs  kernels.cu  lib.rs  notes.txt  num_cpus.rs  optimizers.rs  profiling_internal.rs  rand.rs  stats.rs  string_formatting.rs  test.c  test_blas_strided.c
(+279 files in other folders)
